# group-expenses-back

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  diesel.toml  docker-compose.yml
.github/workflows/: general.yml
db/: init.sql
migrations/2020-09-12-122447_init_db/: down.sql  up.sql
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/infrastructure/: mod.rs
src/infrastructure/config/: mod.rs
src/infrastructure/graphql/: errors.rs  mod.rs  schema.rs
src/infrastructure/graphql/schema/: mod.rs  types.rs
src/infrastructure/http/: graphql.rs  mod.rs
src/infrastructure/repositories/: dashboard.rs  expense.rs  group.rs  mod.rs  models.rs  person.rs  schema.rs  user.rs
src/infrastructure/security/: mod.rs
src/routes/graphql/: handlers.rs  mod.rs  schema.rs
tests/all/: configuration.rs  graphql.rs  health_check.rs  helpers.rs  main.rs
