[package]
name = "group-expenses"
version = "0.1.0"
authors = ["Thibault Dessarps <dessarps.thibault@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "2.0.0"
actix-cors = "0.2.0"
actix-rt = "1.1.1"
env_logger = "0.7.1"
serde = "1.0.115"
serde_json = "1.0.57"
serde_derive = "1.0.115"
juniper = "0.14.2"
dotenv = "0.15.0"
anyhow = "1.0.32"

[dev-dependencies]
reqwest = { version = "0.10.8", features = ["json"] }
tokio = "0.2.22"