[package]
name = "group-expenses"
version = "0.1.0"
authors = ["Thibault Dessarps <dessarps.thibault@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "2.0.0"
actix-cors = "0.2.0"
actix-rt = "1.1.1"
env_logger = "0.7.1"
serde = "1.0.115"
serde_json = "1.0.57"
serde_derive = "1.0.115"
juniper = "0.14.2"
anyhow = "1.0.32"
# diesel needs uuid v0.6 wierdly
uuid = { version = "0.6.5", features = ["v4"] }
chrono = "0.4.15"
futures = "0.3.5"
regex = "1.3.9"
rust-argon2 = "0.8.2"
unicode-segmentation = "1.6.0"
diesel = { version = "1.4.5", features = ["postgres", "r2d2", "uuid", "chrono"] }
diesel_migrations = "1.4.0"
r2d2 = "0.8.9"
lazy_static = "1.4.0"

[dev-dependencies]
reqwest = { version = "0.10.8", features = ["json"] }
tokio = "0.2.22"