[package]
name = "group-expenses"
version = "0.1.0"
authors = ["Thibault Dessarps <dessarps.thibault@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "3.1.0"
actix-cors = "0.5.0"
actix-rt = "1.1.1"
env_logger = "0.8.1"
log = "0.4.11"
serde = "1.0.117"
serde_json = "1.0.59"
serde_derive = "1.0.117"
juniper = "0.14.2"
anyhow = "1.0.33"
# diesel needs uuid v0.6 weirdly
uuid = { version = "0.6.5", features = ["v4", "serde"] }
chrono = { version = "0.4.19", features = ["serde"] }
futures = "0.3.7"
regex = "1.4.1"
rust-argon2 = "0.8.2"
unicode-segmentation = "1.6.0"
diesel = { version = "1.4.5", features = ["postgres", "r2d2", "uuid", "chrono"] }
diesel_migrations = "1.4.0"
r2d2 = "0.8.9"
lazy_static = "1.4.0"
jsonwebtoken = "7.2.0"
futures-util = "0.3.7"
graphql-parser = "0.3.0"

[dev-dependencies]
rand = "0.7.3"
reqwest = { version = "0.10.8", features = ["json"] }
# Wait for actix upgrade to migrate to 0.3
tokio = "0.2.22"
